--- a/exercises/02_basic_calculator/08_overflow/Cargo.toml
+++ b/exercises/02_basic_calculator/08_overflow/Cargo.toml
@@ -3,6 +3,15 @@ name = "overflow"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
+
+[profile.test]
+overflow-checks = false
+
 [lints.rust]
 # We silence dead code warnings for the time being in order to reduce
 # compiler noise.
